# Logger

./: .gitignore  LICENSE  README.md  logger.py  logging_config.toml  pyproject.toml  sample.py
docs/: conf.py  index.md
examples/: logging_config.toml  sample.py
src/kwdyy_logger/: logger.py
tests/: test_logger.py
