[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwdyy-logger"
version = "0.1.0"
description = "A flexible, TOML-configurable logging utility with rich output support."
readme = "README.md"
authors = [{name = "kwdyy"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"
]
requires-python = ">=3.10"
dependencies = [
    "rich>=12.0.0",      # Loggerクラスで使用
]

# オプショナルな依存関係
[project.optional-dependencies]
doc = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=4.0.0"
]
dev = [
    "pytest>=7.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=4.0.0"
]

# コマンドラインから直接実行可能（オプション）
[project.scripts]
logger-demo = "kwdyy_logger.logger:main"

[tool.setuptools.packages.find]
where = ["src"]